2016-03-30  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS:
	minor tweak to NEWS

2016-03-30  Gregory Soyez  <soyez@fastjet.fr>

	* NEWS:
	drafted for the release of fjcontrib-1.022

	* contribs.svn:
	switched GenericSubtractor over to version 1.3.1

2016-03-29  Gregory Soyez  <soyez@fastjet.fr>

	* contribs.svn:
	switched VariableR over to 1.2.0 and Nsubjettiness to 2.2.2

2016-03-10  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/check-updates.sh:   *** ADDED ***
	added an internal script that checks if the list in contribs.svn
	is up-to-date

2016-03-09  Gregory Soyez  <soyez@fastjet.fr>

	* contribs.svn:
	switched ConstituentSubtractor over to version 1.1.1

2015-10-12  Gregory Soyez  <soyez@fastjet.fr>

	* NEWS:
	* VERSION:
	prepared for release 1.021 including QCDAwarePlugin 1.0.0

	* contribs.svn:
	added QCDAwarePlugin to the list of included contribs

2015-10-05  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * scripts/internal/release-fjcontrib.sh
        fixed harmless typo 

2015-10-05  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * Makefile.in
	install permissions of libfastjetcontribfragile.so switched
	from 0644 to 0755 (reported by Dario Berzano).
	This will go into 1.020
        * NEWS
	mentioned item above

2015-10-04  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* NEWS:
	* VERSION:
	prepared for release 1.020 with Nsubjettiness 2.2.1

2015-10-04  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES:
	mentioned the need to check that "make fragile-shared" works. 

	* scripts/internal/release-fjcontrib.sh:
	added a check that "make fragile-shared" works. 

2015-09-28  Gregory Soyez  <soyez@fastjet.fr>

	* contribs.svn:
	switched to version 2.2.1 of Nsubjettiness [minor bug in Makefile]

2015-09-24  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * scripts/internal/generate-html-contents.pl
        set up to extract from svn date of tag of last version and 
        output it in the table with the list of contribs
